[package]
name = "network"
version = "0.1.0"
authors = ["zekin"]
edition = "2018"


[workspace]
members = [
    "example",
    "macro",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
conv = "0.3.3"
num = "0.2.0"
nalgebra = "0.19"
alga = "0.9.1"
