[package]
name = "model_macro"
version = "0.1.0"
authors = ["zekin <wzekin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"

[lib]
proc_macro = true
